plugins {
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'java'
	id 'eclipse'
}

description = 'Curso de SpringBoot: API REST do fórum da Alura'

group = 'br.com.alura'
version = '0.2.0-SNAPSHOT'

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

tasks.withType(Copy) {
	duplicatesStrategy 'exclude'
}

sourceSets {
	main {
		java {
			srcDir('src/main/java')
		}
		resources {
			srcDir('src/main/resources')
		}
	}
	test {
		java {
			srcDir('src/test/java')
		}
		resources {
			srcDir('src/test/resources')
		}
	}
}

repositories {
	mavenCentral()
}

dependencies {
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-test'
	//implementation 'org.springdoc:springdoc-openapi-native:1.6.12'
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
	implementation 'org.springdoc:springdoc-openapi-webmvc-core:1.6.12'
	implementation 'org.springdoc:springdoc-openapi-security:1.6.12'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.apache.commons:commons-lang3:3.12.0'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
	runtimeOnly 'com.h2database:h2'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.junit.jupiter:junit-jupiter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
	useJUnitPlatform()
}

eclipse {
	project {
		name = 'forum'
		comment = 'Curso de SpringBoot: API REST do fórum da Alura'
	}

	jdt {
		sourceCompatibility = 21
		targetCompatibility = 21
	}

	classpath {
		downloadSources = false
		downloadJavadoc = true
	}
}